# llm-tts-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  README.md  examples.http  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: presets.json  voice_map.container.json  voice_map.example.json
docs/: architecture.md
docs/diagrams/: README.md
docs/diagrams/class/: config-and-schemas.md  overview.md  presets.md  providers.md  voice-store.md
docs/diagrams/sequence/: create-speech.md  health-and-ready.md  list-models.md  preset-hot-reload.md  preset-resolution.md  provider-mlx-audio.md  provider-vllm-omni.md  provider-voxtral.md  startup.md  synthesize-rich.md  voice-crud.md  voice-seed-ingestion.md
docs/openapi/: openapi.yaml
docs/perf/: baseline.md
docs/planning/: journal.md  sprint-log.md
docs/planning/sprints/: sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-impl-1.md  sprint-impl-2.md  sprint-impl-3.md  sprint-impl-4.md  sprint-impl-5.md  sprint-impl-6.md  sprint-impl-7.md  sprint-review-1.md  sprint-review-2.md  sprint-review-3.md  sprint-review-4.md
docs/project/: ARCHITECTURE.md  BACKLOG.md  SPEC.md
docs/specs/: analyst-UAT.md  analyst-frs.md  improvement-analysis.md  software-spec.md  writer-nfr.md
docs/specs/requests/: dual-mode-presets-request.md  improvement-request.md
docs/specs/triage/: sprint-7-mid-review-triage.md
plans/: PLAN.md
scripts/: perf_baseline.py
src/llm_tts_api/: __init__.py  app_logging.py  config.py  dependencies.py  errors.py  main.py
src/llm_tts_api/engine/: __init__.py  device.py
src/llm_tts_api/observability/: __init__.py  request_id.py
src/llm_tts_api/routers/: audio.py  chat.py  health.py  models.py  realtime.py  synthesize.py  voices.py
src/llm_tts_api/schemas/: common.py  models.py  speech.py  synthesis.py  transcription.py  voices.py
src/llm_tts_api/services/: audio_postprocessing.py  config_watcher.py  model_cache.py  model_registry.py  not_implemented.py  stt_service.py  synthesize_service.py  text_preprocessing.py  tts_service.py
src/llm_tts_api/services/presets/: __init__.py  config.py  reloader.py  startup.py
src/llm_tts_api/services/tts_providers/: __init__.py  auto_select.py  base.py  cached_model_provider.py  mlx_audio_provider.py  mlx_voxtral_provider.py  qwen_provider.py  registry.py  vllm_omni_provider.py  voice_args.py  voxtral_provider.py
src/llm_tts_api/services/voice_store/: __init__.py  errors.py  fs_blob.py  fs_json_metadata.py  postgres_metadata.py  protocols.py  records.py  s3_blob.py  seed_ingestion.py
src/qwen_tts_api/: __init__.py  config.py  dependencies.py  errors.py  main.py
src/qwen_tts_api/routers/: audio.py  chat.py  health.py  models.py  realtime.py
src/qwen_tts_api/schemas/: common.py  models.py  speech.py
src/qwen_tts_api/services/: model_registry.py  not_implemented.py  stt_service.py  tts_service.py
tests/: __init__.py  conftest.py  test_app_logging.py  test_audio_speech.py  test_audio_transcription_translation.py  test_concurrency.py  test_config.py  test_config_runtime_knobs.py  test_config_watcher.py  test_conftest.py  test_dependencies_getters.py  test_docs_inventory.py  test_engine_device.py  test_errors.py  test_health_endpoints.py  test_mlx_audio_provider.py  test_model_cache.py  test_model_registry.py  test_models_endpoint.py  test_observability_request_id.py  test_openai_adapter.py  test_openai_adapter_parity.py  test_perf_regression.py  test_preset_hot_reload.py  test_preset_resolution.py  test_presets_config.py  test_provider_auto_select.py  test_s3_blob_repository.py  test_startup_preload.py  test_stubs.py  test_synthesize.py  test_text_preprocessing.py  test_tts_chunking.py  test_tts_provider_registry.py  test_vllm_omni_provider.py  test_voice_args.py  test_voice_seed_ingestion.py  test_voice_store.py  test_voice_store_postgres.py  test_voices_router.py
tests/fakes/: __init__.py  fake_tts_provider.py  fake_tts_service.py  fake_voice_store.py  seed_voice.py
tests/perf/fixtures/: baseline_input.txt
