[project]
name = "llm-tts-api"
version = "0.1.0"
description = "OpenAI-compatible local audio API server with pluggable TTS providers (Qwen, Voxtral)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Antonio-Rinaldi" }]
keywords = ["fastapi", "openai-compatible", "tts", "stt", "audio", "llm", "qwen", "voxtral"]

dependencies = [
  "fastapi>=0.135.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.12.0",
  "soundfile>=0.13.0",
  "num2words>=0.5.14",
  "mlx-audio>=0.4.2",
  "psutil>=5.9.0",
]

[project.scripts]
llm-tts-api = "llm_tts_api.main:run"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/llm_tts_api"]
branch = false

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
llm_tts_api = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_tts_api*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
