[project]
name = "llm-tts-api"
version = "0.1.0"
description = "OpenAI-compatible local audio API server with pluggable TTS providers (Qwen, Voxtral)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Antonio-Rinaldi" }]
keywords = ["fastapi", "openai-compatible", "tts", "stt", "audio", "llm", "qwen", "voxtral"]

dependencies = [
  "fastapi>=0.135.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.12.0",
  "soundfile>=0.13.0",
  "num2words>=0.5.14",
  "mlx-audio>=0.4.2",
  "psutil>=5.9.0",
]

[project.scripts]
llm-tts-api = "llm_tts_api.main:run"

[project.optional-dependencies]
# S-023 — Postgres metadata backend. Selecting
# ``TTS_VOICE_METADATA_BACKEND=postgres`` without this extra installed fails
# startup with ``config_error.missing_extra`` (NFR-ST-02).
postgres = [
  "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  # Type-checking the optional postgres backend under ``mypy --strict``
  # needs ``psycopg`` importable in the dev environment. The "base install
  # does not import psycopg" check in ``tests/test_voice_store.py`` uses a
  # fresh subprocess that only imports the voice_store package — which
  # never imports ``postgres_metadata`` — so this dev dep does NOT leak
  # into the default install path.
  "psycopg[binary]>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring external infrastructure (Postgres, S3); skipped by default unless the relevant DSN/endpoint env var is set.",
]

[tool.coverage.run]
source = ["src/llm_tts_api"]
branch = false
# S-023 — Postgres backend exercises live psycopg + a running database;
# CI does not provision Postgres so the integration test skips. Omitting
# keeps the coverage floor (83%) honest about what unit tests verify.
omit = [
    "src/llm_tts_api/services/voice_store/postgres_metadata.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
llm_tts_api = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_tts_api*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
